Fixing ordering issues with display columns for Realms and Anys